--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="utf-8" lang="fr">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="instructions/favicon.ico"/>
@@ -20,15 +19,6 @@
             <a href="#chantiers">Nos chantiers</a>
             <a href="#contacts">Nous contacter</a>
         </nav>
-        <div id="fa-bars"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
-        <div id="dropMenu">
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#services">Nos services</a></li>
-                <li><a href="#chantiers">Nos chantiers</a></li>
-                <li><a href="#contacts">Nous contacter</a></li>
-            </ul>
-        </div>
         <div class="generalinfo">
             <img src="instructions/logo3.png">
             <h1>Mon plombier bien aimé</h1>
@@ -43,23 +33,7 @@
             </a>
         </div>
         <div>
-        	<!-- sliders!-->
-            <h2><a href="chantiers.php" id="chantiers">Nos Chantiers</a></h2>
-            <section>
-                <div id='hideAera'>
-                    <p id="stop"><i class="fa fa-pause-circle-o fa-4x" aria-hidden="true"></i></p>
-                    <p id="start"><i class="fa fa-play-circle-o fa-4x" aria-hidden="true"></i></p>
-                </div>
-                <div id="slider">
-                    <ul class="sliderDetail">
-                        <li class="sliderImg"><img src="instructions/slider1.jpg" alt="slider1"></li>
-                        <li class="sliderImg"><img src="instructions/slider2.jpg" alt="slider2"></li>
-                        <li class="sliderImg"><img src="instructions/slider3.jpg" alt="slider3"></li>
-                    </ul>
-                </div>          
-            </section>
-            <!-- flex !-->
-            <h2><a href="services.php" id="services">Nos Services</a></h2>
+        	<h2><a href="services.php" id="services">Nos Services</a></h2>
         	<section class="nosservices">
                 <div class="service">
                     <img src="instructions/service111.png">
@@ -78,6 +52,7 @@
                         <li>Installation de chauffage central(radiateur et plancher chauffant)</li>
                     </ul>
                 </div>
+
                 <div class="service">
                     <img src="instructions/service33.png">
                     <h3>VMC</h3>
@@ -86,9 +61,26 @@
                         <li>Traitement d'air</li>
                         <li>Climatisation</li>
                     </ul>
-                </div>		
+                </div>
+		
         	</section>
-        	<!-- contact !-->
+        	<h2><a href="chantiers.php" id="chantiers">Nos Chantiers</a></h2>
+        	<section> <!-- sliders!-->
+                <div id='hideAera'>
+                    <p id="stop"><i class="fa fa-pause-circle-o fa-4x" aria-hidden="true"></i></p>
+                    <p id="start"><i class="fa fa-play-circle-o fa-4x" aria-hidden="true"></i></p>
+                </div>
+                <div id="slider">
+                    <ul class="sliderDetail">
+                        <li class="sliderImg"><img src="instructions/slider1.jpg" alt="slider1"></li>
+                        <li class="sliderImg"><img src="instructions/slider2.jpg" alt="slider2"></li>
+                        <li class="sliderImg"><img src="instructions/slider3.jpg" alt="slider3"></li>
+                    </ul>
+                </div>
+                
+
+
+           	</section>
             <h2><a href="contacts.php" id="contacts">Nous contacter</a></h2>
             <form action="index.php" method="post">
                 <input type="text" name="firstname" placeholder="Prénom" required><br>
@@ -96,7 +88,7 @@
                 <input type="text" name="zipcode" placeholder="Code postal" pattern="[0-9]{5}"required><br>
                 <input type="mail" name="mail" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,5}$" required><br>
                 <textarea cols="100" rows="4" name="content" placeholder="Message" required></textarea><br>
-                <input id="envoyer" type="submit" value="Envoyer">
+                <input type="submit" value="Envoyer">
             </form>
 
 
@@ -154,11 +146,10 @@
         </div>
     </main>
     <footer>
-    	<h5>Mon plombier bien aimé</h5>
-    		<h5>Devis gratuit</h5>
-    		<h5>Par tél : 01 23 45 67 89</h5>
+    	<h1>Mon plombier bien aimé</h1>
+    		<p>Devis gratuit</p>
+    		<p>Par tél : 01 23 45 67 89</p>
     </footer>
     <script type="text/javascript" src="sliders.js"></script>
-    <script type="text/javascript" src="dropmenu.js"></script>
 </body>
 </html>
